add test case for overloaded methods